--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
+*{
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(33, 62, 65);
+  background-color: #111;
   color: white;
+  font-family: 'halvetica',sans-serif;
 }
 
 code {
@@ -17,13 +17,35 @@ code {
 
 h1 {
   text-align: center;
+  margin-top: 20px;
+  font-size: 60px;
+}
+span {
+  background-color: orange;
+  color: #000;
+  padding: 6px;
+  border-radius: 5px;
+}
+p{
+
 }
 main{
   min-height: 70vh;
 }
 .about {
   text-align: center;
+  display: flex;
+  margin: 0 auto;
+  width: 200px;
+  margin-top: 20px;
+  flex-direction: column;
+  gap: 20px;
   
+  
+}
+.about a {
+  text-decoration: underline;
+  cursor: pointer!important;
 }
 .about p {
   text-decoration: underline;
